--- a/static/common/main.css
+++ b/static/common/main.css
@@ -274,3 +274,7 @@ form input[type=password] {
     right:0;
     background-color:#ffffff;
 }
+/* The max width is dependant on the container (more info below) */
+.popover{
+    max-width: 100%; /* Max Width of the popover (depending on the container!) */
+}
