--- a/question/templates/question/t_alltopics.html
+++ b/question/templates/question/t_alltopics.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
     <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
 </head>
-<body>
+
+<body class="Entry-body">
+<header  role="banner" class="123Sticky AppHeader">
+<div class="AppHeader-inner">
 
 <div class="container">
-<header  role="banner" data-za-module="TopNavBar" >
-<div class="Banner"></div>
-<!-- react-empty: 1220 -->
 <div class="row">
 <div class="col-md-1">
 <a href="/" aria-label="大大大">
@@ -24,40 +25,55 @@
 </div>
 <nav role="navigation" class="col-md-3">
 <a class="AppHeader-navItem is-active" href="/">首页</a>
-<a class="AppHeader-navItem" href="/explore">发现</a>
+<a class="AppHeader-navItem" href="/maimai">买卖</a>
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
+
+
 <div class="SearchBar col-md-6" role="search">
-<input type="text" maxlength="100" value="" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-activedescendant="AutoComplet-88417-181--1" id="Popover-88417-61448-toggle" aria-haspopup="true" aria-owns="Popover-88417-61448-content" class="Input" placeholder="搜索你感兴趣的内容…">
-<button class="Button SearchBar-searchIcon Button--primary" aria-label="搜索" type="button">
-<svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g>
-</svg>
-</button>
-<!-- react-empty: 29 -->
-<button class="Button QuestionAskButton SearchBar-askButton btn-success" type="button" data-toggle="modal" data-target="#askModal">
-<!-- react-text: 31 -->提问<!-- /react-text --><!-- react-empty: 32 -->
+<div class="SearchBar-toolWrapper">
+<form class="SearchBar-tool">
+<div>
+<div class="1Popover">
+<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
+<input type="text" maxlength="120" value="" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-activedescendant="AutoComplet-41236-89421--1" id="Popover-41236-42847-toggle" aria-haspopup="true" aria-owns="Popover-41236-42847-content" class="Input" placeholder="搜索你感兴趣的内容…">
+<div class="Input-after">
+<button class="Button SearchBar-searchIcon Button--primary" aria-label="搜索" type="button" data-reactid="25"><svg viewBox="0 0 16 16" class="Icon Icon--search" style="height:16px;width:16px;" width="16" height="16" aria-hidden="true" data-reactid="26"><title data-reactid="27"></title><g data-reactid="28"><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg>
 </button>
 </div>
+</div>
+</div>
+</div>
+</form>
+</div>
+<button class="1Button QuestionAskButton SearchBar-askButton 1Button--primary 1Button--green btn btn-success" type="button" data-toggle="modal" data-target="#askModal">提问</button>
+</div>
+
+
 <div class="AppHeader-userInfo col-md-2">
-<button class="Button PushNotifications-icon Button--plain" type="button" id="Popover-88478-67360-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-88478-67360-content">
+<div class="1Popover PushNotifications AppHeader-notifications">
+<button class="1Button PushNotifications-icon 1Button--plain" type="button" id="cPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 22" class="Icon Icon--news" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M2.502 14.08C3.1 10.64 2 3 8.202 1.62 8.307.697 9.08 0 10 0s1.694.697 1.797 1.62C18 3 16.903 10.64 17.497 14.076c.106 1.102.736 1.855 1.7 2.108.527.142.868.66.793 1.206-.075.546-.542.95-1.09.943H1.1C.55 18.34.084 17.936.01 17.39c-.075-.547.266-1.064.794-1.206.963-.253 1.698-1.137 1.698-2.104zM10 22c-1.417.003-2.602-1.086-2.73-2.51-.004-.062.02-.124.063-.17.043-.045.104-.07.166-.07h5c.063 0 .124.025.167.07.044.046.067.108.063.17-.128 1.424-1.313 2.513-2.73 2.51z"></path></g>
 </svg>
-<!-- react-empty: 1226 -->
 </button>
-<!-- react-empty: 1227 -->
+</div>
 
-<button class="Button Messages-icon Button--plain" type="button" id="Popover-88478-87650-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-88478-87650-content">
+<div class="1Popover Messages AppHeader-messages">
+<button class="1Button Messages-icon 1Button--plain" id="dPopover" type="button" id="Popover-88478-87650-toggle" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 20" class="Icon Icon--message" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M9 0C3.394 0 0 4.13 0 8c0 1.654.522 3.763 2.014 5.566.314.292.518.82.454 1.17-.165 1.488-.842 1.905-.842 1.905-.328.332.105.67.588.582 1.112-.2 2.07-.58 3.526-1.122.4-.202.464-.147.78-.078C11.524 17.764 18 14 18 8c0-3.665-3.43-8-9-8z"></path><path d="M19.14 9.628c.758.988.86 2.01.86 3.15 0 1.195-.62 3.11-1.368 3.938-.21.23-.354.467-.308.722.12 1.073.614 1.5.614 1.5.237.24-.188.563-.537.5-.802-.145-1.494-.42-2.545-.81-.29-.146-.336-.106-.563-.057-2.043.712-4.398.476-6.083-.926 5.964-.524 8.726-3.03 9.93-8.016z"></path></g>
 </svg>
 </button>
-<!-- react-empty: 1234 -->
+</div>
 
-<!-- react-empty: 42 -->
+<div class="AppHeader-profile">
+<div class="1Popover AppHeader-menu">
+<img class="Avatar AppHeader-profileAvatar" id="ePopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
+</div>
+</div>
 
-<button class="Button AppHeader-profileEntry Button--plain" type="button" id="Popover-88478-48941-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-88478-48941-content">
-<img class="Avatar AppHeader-profileAvatar" width="30" height="30" src="https://pic1.zhimg.com/da8e974dc_is.jpg" srcset="https://pic1.zhimg.com/da8e974dc_im.jpg 2x">
-</button>
-<!-- react-empty: 1239 -->
+</div>
+
+</div>
 </div>
 </div>
 </header>
