--- a/question/templates/question/index.html
+++ b/question/templates/question/index.html
@@ -59,7 +59,7 @@
 </div>
 
 <div class="1Popover Messages AppHeader-messages">
-<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" id="Popover-88478-87650-toggle" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
+<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 20" class="Icon Icon--message" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M9 0C3.394 0 0 4.13 0 8c0 1.654.522 3.763 2.014 5.566.314.292.518.82.454 1.17-.165 1.488-.842 1.905-.842 1.905-.328.332.105.67.588.582 1.112-.2 2.07-.58 3.526-1.122.4-.202.464-.147.78-.078C11.524 17.764 18 14 18 8c0-3.665-3.43-8-9-8z"></path><path d="M19.14 9.628c.758.988.86 2.01.86 3.15 0 1.195-.62 3.11-1.368 3.938-.21.23-.354.467-.308.722.12 1.073.614 1.5.614 1.5.237.24-.188.563-.537.5-.802-.145-1.494-.42-2.545-.81-.29-.146-.336-.106-.563-.057-2.043.712-4.398.476-6.083-.926 5.964-.524 8.726-3.03 9.93-8.016z"></path></g>
 </svg>
 </button>
@@ -67,7 +67,7 @@
 
 <div class="AppHeader-profile">
 <div class="1Popover AppHeader-menu">
-<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
+<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-er-id="{{user.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
 </div>
 </div>
 
@@ -126,8 +126,7 @@
                 <div class="Modal-content">
                     <div class="QuestionAsk">
                         <form method="post" action="/question/" id="form_ask">
-                        {% csrf_token %}
-            
+                        {% csrf_token %}            
                             <div class="QuestionAsk-section">
                                 <div class="QuestionAsk-title">
                                         <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
@@ -139,36 +138,12 @@
                             <div class="QuestionAsk-section">
                                 <div class="TagInput TagInput--empty">
                                             <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加话题"></select>
-                                            <!--
-                                            <div class="Input-after">
-                                            <svg class="Zi Zi--Search" fill="#afbdcf" viewBox="0 0 24 24" width="18" height="18"><path d="M17.068 15.58a8.377 8.377 0 0 0 1.774-5.159 8.421 8.421 0 1 0-8.42 8.421 8.38 8.38 0 0 0 5.158-1.774l3.879 3.88c.957.573 2.131-.464 1.488-1.49l-3.879-3.878zm-6.647 1.157a6.323 6.323 0 0 1-6.316-6.316 6.323 6.323 0 0 1 6.316-6.316 6.323 6.323 0 0 1 6.316 6.316 6.323 6.323 0 0 1-6.316 6.316z" fill-rule="evenodd"></path></svg>
-                                            </div>
-                                            -->
                                 </div>
                             </div>
-            
-			          
-                                <!--<select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-max-options="5" data-style="11btn-success">
-                                        <option value="苹果">苹果</option>
-                                        <option data-icon="glyphicon-heart" value="菠萝">菠萝</option>
-                                        <option data-divider="true" value="香蕉">香蕉</option>
-                                        <option value="火龙果">火龙果</option>
-                                </select>-->
+
                             <input id="hide_for_submit" type="hidden" name="topics" value="null123">
                 
-                            <div class="QuestionAsk-section QuestionAsk-DetailSection">   
-                                                    问题描述（可选）：                            
-                
-                <!--
-                <div class="QuestionAsk-sectionHeaderRight">
-                <button class="Button Editable-control Button--plain" aria-label="加粗" data-tooltip="加粗" data-tooltip-position="bottom" type="button">
-                <svg class="Zi Zi--FormatBold" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M9 17.025V13h4.418c1.19 0 2.415.562 2.415 2.012s-1.608 2.013-2.9 2.013H9zM9 7h4.336c1 0 1.814.888 1.814 2 0 .89-.814 2-1.814 2H9V7zm8.192 1.899a3.893 3.893 0 0 0-3.888-3.889S9.334 5 8.167 5C7 5 7 6.167 7 6.167v11.666C7 19 8.167 19 8.167 19l5.572.01c2.333 0 4.231-1.86 4.231-4.148a4.122 4.122 0 0 0-1.77-3.372 3.873 3.873 0 0 0 .992-2.591z" fill-rule="evenodd"></path></svg>
-                </button>
-                <button class="Button Editable-control Button--plain" aria-label="插入图片" data-tooltip="插入图片" data-tooltip-position="bottom" type="button"><svg class="Zi Zi--InsertImage" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M21 17.444C21 18.3 20.1 19 19 19H5c-1.1 0-2-.7-2-1.556V6.556C3 5.7 3.9 5 5 5h14c1.1 0 2 .7 2 1.556v10.888zm-9.437-3.919a.5.5 0 0 1-.862.013l-1.26-2.065a.5.5 0 0 0-.861.012l-2.153 3.767a.5.5 0 0 0 .435.748h10.292a.5.5 0 0 0 .438-.741L14.573 9.78a.5.5 0 0 0-.872-.006l-2.138 3.75z" fill-rule="evenodd"></path></svg></button>
-                <button class="Button Editable-control Button--plain" aria-label="插入视频" data-tooltip="插入视频" data-tooltip-position="bottom" type="button"><svg class="Zi Zi--InsertVideo" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M10.546 15c-.466.273-.86.053-.86-.5V9.505c0-.565.385-.778.86-.501l4.278 2.497c.466.272.475.726 0 1.003L10.546 15zM5 5S3 5 3 7v10s0 2 2.002 2H19c2 0 2-2 2-2V7c0-2-2-2-2-2H5z" fill-rule="evenodd"></path></svg></button>
-                </div>
-                -->                
-                                <textarea id="summernote" name="detail" 1rows="5" 1cols="70" 1maxlength="160"></textarea>              
+                            <div class="QuestionAsk-section QuestionAsk-DetailSection">问题描述（可选）:<textarea id="summernote_question" name="detail" 1rows="5" 1cols="70" 1maxlength="160"></textarea>              
                             </div>
                            
                             <div class="ModalButtonGroup QuestionAsk-buttonGroup ModalButtonGroup--vertical">
@@ -177,11 +152,9 @@
                         </form>
                     </div>
                 </div>
-		</div>
-        
+		</div>        
         <button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain close" aria-label="关闭" type="button">
-        <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
-        
+        <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>        
 	</div>
 </div>
 <!--- div other--->
@@ -193,36 +166,6 @@
 <script src="{% static 'common/main.js' %}"></script>
     
 <script>
-$(window).on('load', function () {
-    //$('#topics_select').selectpicker({
-    //    'selectedText': 'cat'
-    //});
-});
-
-$('#topics_select').on('show.bs.select', function (e) {
-  // do something...
-  //alert("show.bs.select");
-  $.post("/ajax/topics/", function(ret){
-  //$('#result').html(ret.result)
-  //alert(JSON.stringify(ret));
-  //$.each(ret,function(data){
-  //alert(ret[data]);
-  //});
-  $('#topics_select').empty();
-  for (var i in ret)
-  {
-    $('#topics_select').append("<option value=" + ret[i][0] + ":" + ret[i][1] + ">" + ret[i][1] + "</option>");
-  }
-    
-  $('.selectpicker').selectpicker('refresh');
-  
-  })
-
-});
-
-
-
-
 function appendFeedElement(ret)
 {
     for(i in ret)
@@ -321,13 +264,12 @@ function getMoreData() {
     order=1;//pub_date
     start=nums;
     end=start+5;
-    $.get('/ajax/questions/'+order+'/'+start+'/'+end+'/',function(ret){          
-        appendFeedElement(ret);
-        //$('.PeoplMenuPopover').popover();   
-        check_popover_show();
-        check_answer_like();
-        check_content_expand();
-        check_content_collapse();
+    $.get('/ajax/questions/'+order+'/'+start+'/'+end+'/',function(ret){
+        if("fail"!=ret)
+        {
+            appendFeedElement(ret);  
+            check_sets();
+        }
     });
 } 
 
@@ -349,13 +291,13 @@ $(function() {
 
 $(document).ready(function() {
     getMoreData();  
-    $('#summernote').summernote({
+    $('#summernote_question').summernote({
     height:120,
     lang:'zh-CN',
     placeholder:'问题背景、条件等详细信息',
     callbacks: {
         onImageUpload: function(files){
-            img=sendFile(files[0]);
+            img=sendFile_question(files[0]);
             console.log(img);
         }
     }
