--- a/static/common/z_main.css
+++ b/static/common/z_main.css
@@ -60,7 +60,7 @@ a{
 
 .Button{
     display:inline-block;
-    padding:0;
+    padding:0 16px;
     font-size:14px;
     line-height:32px;
     color:#8590a6;
